# ComponEng

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_flags.txt
.github/workflows/: ci.yml
assets/shaders/: diffuse.frag  water.frag  water.vert
docs/: DESIGN.md  USER.md
example/: CMakeLists.txt  collision_sounds.cpp  compile_flags.txt  main.cpp  player_controller.cpp
example/include/: collision_sounds.hpp  player_controller.hpp
include/: archetype.hpp  archetype_manager.hpp  component_array.hpp  component_manager.hpp  component_registry.hpp  entity.hpp  entity_manager.hpp  game.hpp  input_state.hpp  quaternion.hpp  query.hpp  resource_manager.hpp  shader.hpp  system.hpp  system_manager.hpp  vec3.hpp  window.hpp  world.hpp
include/componeng/components/: audio_component.hpp  camera_component.hpp  collider_component.hpp  input_component.hpp  material_component.hpp  mesh_component.hpp  rigidbody_component.hpp  transform_component.hpp
include/componeng/core/: audio_engine.hpp  debug_ui.hpp  engine.hpp  game.hpp  input_state.hpp  logger.hpp  raw_input_state.hpp  types.hpp  utils.hpp  window.hpp
include/componeng/ecs/: archetype.hpp  archetype_manager.hpp  component_registry.hpp  entity.hpp  entity_manager.hpp  event_bus.hpp  query.hpp  system.hpp  system_manager.hpp  thread_pool.hpp  world.hpp
include/componeng/events/: collision_event.hpp  entity_event.hpp  event_bus.hpp
include/componeng/physics/: collision_detection.hpp  physics_system.hpp
include/componeng/renderer/: asset_manager.hpp  batch_map.hpp  mesh.hpp  render_system.hpp  resource_manager.hpp  shader.hpp  texture.hpp
include/componeng/renderer/api/: irender_device.hpp
include/componeng/renderer/opengl/: gl_buffer.hpp  gl_mesh.hpp  gl_render_device.hpp  gl_shader.hpp  gl_texture.hpp
include/componeng/resources/: action_state.hpp  audio_engine.hpp  input_state.hpp  main_camera.hpp  resource_manager.hpp
include/componeng/systems/: audio_system.hpp  camera_system.hpp  input_system.hpp
include/componeng/utils/: logger.hpp  utils.hpp
include/components/: bounding_box_component.hpp  camera_component.hpp  collider_component.hpp  input.hpp  input_component.hpp  material.hpp  material_component.hpp  mesh.hpp  mesh_component.hpp  plane_component.hpp  rigidbody.hpp  rigidbody_component.hpp  transform.hpp  transform_component.hpp
include/core/: debug_ui.hpp  engine.hpp  game.hpp  input_state.hpp  logger.hpp  types.hpp  utils.hpp  window.hpp
include/ecs/: archetype.hpp  archetype_manager.hpp  component_registry.hpp  entity.hpp  entity_manager.hpp  query.hpp  system.hpp  system_manager.hpp  thread_pool.hpp  world.hpp
include/physics/: collision_detection.hpp  physics_system.hpp
include/renderer/: batch_map.hpp  mesh.hpp  model.hpp  render_system.hpp  resource_manager.hpp  shader.hpp  texture.hpp
include/renderer/api/: irender_device.hpp
include/renderer/opengl/: gl_buffer.hpp  gl_mesh.hpp  gl_render_device.hpp  gl_shader.hpp  gl_texture.hpp
include/systems/: camera_system.hpp  input_system.hpp  mesh_generator.hpp  physics_system.hpp  render_system.hpp  ui_system.hpp
shaders/: diffuse.frag  diffuse.vert
src/: camera_system.cpp  game.cpp  input_system.cpp  main.cpp  model.cpp  physics_system.cpp  render_system.cpp  resource_manager.cpp  shader.cpp  texture.cpp  ui_system.cpp  utils.cpp  window.cpp
src/componeng/core/: audio_engine.cpp  debug_ui.cpp  engine.cpp  utils.cpp  window.cpp
src/componeng/ecs/: world.cpp
src/componeng/physics/: collision_detection.cpp  physics_system.cpp
src/componeng/renderer/: asset_manager.cpp  mesh.cpp  render_system.cpp  resource_manager.cpp  shader.cpp  texture.cpp
src/componeng/renderer/opengl/: gl_buffer.cpp  gl_mesh.cpp  gl_render_device.cpp  gl_shader.cpp  gl_texture.cpp
src/componeng/resources/: audio_engine.cpp
src/componeng/systems/: audio_system.cpp  camera_system.cpp  input_system.cpp
src/core/: debug_ui.cpp  engine.cpp  game.cpp  utils.cpp  window.cpp
src/ecs/: world.cpp
src/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp
src/physics/: collision_detection.cpp  physics_system.cpp
src/renderer/: mesh.cpp  model.cpp  render_system.cpp  resource_manager.cpp  shader.cpp  texture.cpp
src/renderer/opengl/: gl_buffer.cpp  gl_mesh.cpp  gl_render_device.cpp  gl_shader.cpp  gl_texture.cpp
src/systems/: camera_system.cpp  input_system.cpp  mesh_generator.cpp  physics_system.cpp  render_system.cpp  ui_system.cpp
tests/: test_archetype.cpp  test_collision.cpp  test_component_registry.cpp  test_entity_manager.cpp  test_query.cpp
